--- a/Invoice/report/PO_PRODUKSI_2.jrxml
+++ b/Invoice/report/PO_PRODUKSI_2.jrxml
@@ -3,105 +3,70 @@
 	<property name="ireport.zoom" value="1.0"/>
 	<property name="ireport.x" value="0"/>
 	<property name="ireport.y" value="0"/>
-	<parameter name="date1" class="java.util.Date">
-		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
-	</parameter>
-	<parameter name="date2" class="java.util.Date">
-		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
-	</parameter>
-	<parameter name="perusahaan" class="java.lang.String">
-		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
-	</parameter>
-	<parameter name="klien" class="java.lang.String">
-		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
-	</parameter>
 	<queryString>
-		<![CDATA[SELECT
-    pp.PO_PRODUKSI_ID,
-    pp.PO_PRODUKSI_NO,
-    k.NO_KONTRAK,
-    pp.PRODUKSI,
-    pp.TANGGAL,
-    pp.NILAI_PRODUKSI,
-    pp.KETERANGAN,
-    pp.PPN_IMAGE,
-    dp.*
-FROM
-    PO_PRODUKSI pp
-        INNER JOIN
-    KONTRAK k ON pp.KONTRAK_ID = k.KONTRAK_ID
-        INNER JOIN
-    DETAIL_PRODUKSI dp ON pp.PO_PRODUKSI_NO = dp.PO_PRODUKSI_NO
-        INNER JOIN
-    MASTER_PERUSAHAAN mp ON k.MASTER_PERUSAHAAN_ID = mp.MASTER_PERUSAHAAN_ID
-WHERE
-    mp.NAME = $P{perusahaan} OR k.PROJECT = $P{klien} AND
-    pp.TANGGAL BETWEEN $P{date1} AND $P{date2};]]>
+		<![CDATA[]]>
 	</queryString>
-	<field name="PO_PRODUKSI_ID" class="java.lang.Integer">
+	<field name="poProduksiId" class="java.lang.String">
 		<fieldDescription><![CDATA[]]></fieldDescription>
 	</field>
-	<field name="PO_PRODUKSI_NO" class="java.lang.String">
+	<field name="poProduksiNo" class="java.lang.String">
 		<fieldDescription><![CDATA[]]></fieldDescription>
 	</field>
-	<field name="NO_KONTRAK" class="java.lang.String">
+	<field name="noKontrak" class="java.lang.String">
 		<fieldDescription><![CDATA[]]></fieldDescription>
 	</field>
-	<field name="PRODUKSI" class="java.lang.String">
+	<field name="produksi" class="java.lang.String">
 		<fieldDescription><![CDATA[]]></fieldDescription>
 	</field>
-	<field name="TANGGAL" class="java.sql.Date">
+	<field name="tanggal" class="java.lang.String">
 		<fieldDescription><![CDATA[]]></fieldDescription>
 	</field>
-	<field name="NILAI_PRODUKSI" class="java.math.BigDecimal">
+	<field name="nilaiProduksi" class="java.lang.String">
 		<fieldDescription><![CDATA[]]></fieldDescription>
 	</field>
-	<field name="KETERANGAN" class="java.lang.String">
+	<field name="keterangan" class="java.lang.String">
 		<fieldDescription><![CDATA[]]></fieldDescription>
 	</field>
-	<field name="PPN_IMAGE" class="java.lang.Object">
+	<field name="detailProduksiId" class="java.lang.String">
 		<fieldDescription><![CDATA[]]></fieldDescription>
 	</field>
-	<field name="DETAIL_PRODUKSI_ID" class="java.lang.Integer">
+	<field name="media" class="java.lang.String">
 		<fieldDescription><![CDATA[]]></fieldDescription>
 	</field>
-	<field name="MEDIA" class="java.lang.String">
+	<field name="durasi" class="java.lang.String">
 		<fieldDescription><![CDATA[]]></fieldDescription>
 	</field>
-	<field name="DURASI" class="java.lang.String">
+	<field name="hari" class="java.lang.String">
 		<fieldDescription><![CDATA[]]></fieldDescription>
 	</field>
-	<field name="HARI" class="java.lang.String">
+	<field name="lokasi" class="java.lang.String">
 		<fieldDescription><![CDATA[]]></fieldDescription>
 	</field>
-	<field name="LOKASI" class="java.lang.String">
+	<field name="preProduksiUraian" class="java.lang.String">
 		<fieldDescription><![CDATA[]]></fieldDescription>
 	</field>
-	<field name="PRE_PRODUKSI_URAIAN" class="java.lang.String">
+	<field name="preProduksiJenis" class="java.lang.String">
 		<fieldDescription><![CDATA[]]></fieldDescription>
 	</field>
-	<field name="PRE_PRODUKSI_JENIS" class="java.lang.String">
+	<field name="produksiJenis" class="java.lang.String">
 		<fieldDescription><![CDATA[]]></fieldDescription>
 	</field>
-	<field name="PRODUKSI_JENIS" class="java.lang.String">
+	<field name="produksiJumlah" class="java.lang.String">
 		<fieldDescription><![CDATA[]]></fieldDescription>
 	</field>
-	<field name="PRODUKSI_JUMLAH" class="java.lang.String">
+	<field name="produksiBarang" class="java.lang.String">
 		<fieldDescription><![CDATA[]]></fieldDescription>
 	</field>
-	<field name="PRODUKSI_BARANG" class="java.lang.String">
+	<field name="produksiHargaSatuan" class="java.lang.String">
 		<fieldDescription><![CDATA[]]></fieldDescription>
 	</field>
-	<field name="PRODUKSI_HARGA_SATUAN" class="java.math.BigDecimal">
+	<field name="produksiTotalHarga" class="java.lang.String">
 		<fieldDescription><![CDATA[]]></fieldDescription>
 	</field>
-	<field name="PRODUKSI_TOTAL_HARGA" class="java.math.BigDecimal">
+	<field name="postProduksiBarang" class="java.lang.String">
 		<fieldDescription><![CDATA[]]></fieldDescription>
 	</field>
-	<field name="POST_PRODUKSI_BARANG" class="java.lang.String">
-		<fieldDescription><![CDATA[]]></fieldDescription>
-	</field>
-	<field name="POST_PRODUKSI_TOTAL_HARGA" class="java.math.BigDecimal">
+	<field name="postProduksiTotalHarga" class="java.lang.String">
 		<fieldDescription><![CDATA[]]></fieldDescription>
 	</field>
 	<background>
@@ -135,7 +100,7 @@ WHERE
 			<textField>
 				<reportElement x="112" y="8" width="236" height="20" uuid="859fce3d-0614-41f8-8341-321f011cda56"/>
 				<textElement verticalAlignment="Middle"/>
-				<textFieldExpression><![CDATA[$F{PO_PRODUKSI_NO}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{poProduksiNo}]]></textFieldExpression>
 			</textField>
 		</band>
 	</pageHeader>
@@ -215,35 +180,35 @@ WHERE
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font size="8"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$F{NO_KONTRAK}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{noKontrak}]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement x="171" y="1" width="115" height="19" uuid="3154b243-7485-4841-95c2-586199f5ed8f"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font size="8"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$F{PRODUKSI}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{produksi}]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement x="286" y="1" width="100" height="19" uuid="47135b72-b205-4b74-ba7f-91f998a13bae"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font size="8"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$F{TANGGAL}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{tanggal}]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement x="386" y="1" width="100" height="19" uuid="2efe89f8-ea1c-4965-bcf5-e7cb352bbed4"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font size="8"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$F{NILAI_PRODUKSI}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{nilaiProduksi}]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement x="488" y="1" width="287" height="19" uuid="068f524f-aadc-42fb-8aa7-d2c8786793ab"/>
 				<textElement verticalAlignment="Middle">
 					<font size="8"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$F{KETERANGAN}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{keterangan}]]></textFieldExpression>
 			</textField>
 		</band>
 	</detail>
